# esp32s3-idf-rs

./: .gitignore  Cargo.toml  diagram.json  export-esp.ps1  wokwi.toml
.cargo/: config.toml
.devcontainer/: devcontainer.json
docs/: README.md
scripts/: flash.sh
